--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 
 <head>
     <title>welcome to 201 level</title>
+    <link rel="stylesheet" href="style.css">
+
     <style>
+
+        h1{background-color: lightgreen;}
         #firstLink {
             background-color: rgb(141, 196, 245);
         }
@@ -35,7 +39,10 @@
 
     <main>
         <article>
-            <p style="color: rgb(223, 14, 195);">what is your name?</p>
+            <p style="color: rgb(223, 14, 195);background-color: rgb(141, 196, 245)">what is your name?</p>
+            <p style="color: mediumaquamarine;background-color:rgb(255, 0, 0)">what's your fav color?</p>
+            <p style="color: rgb(36, 3, 54);background-color:greenyellow">whats your age?</p>
+            <p style="color: rgb(253, 69, 192);background-color:rgb(109, 108, 107)">whats your fav fruit?</p>
             <p>here we will learn about HTML, CSS and JAVASCRIPT</p>
         </article>
     </main>
@@ -43,9 +50,7 @@
     <footer>
         &copy; ASAC 2021 .Mariam Al-Shammari
     </footer>
-    <script>
-        // prompt('welcome all, are you having good time?');
-    </script>
+ 
 
     <script src="js/app.js"></script>
   
